--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,12 @@
                 <ul class="portfolio-img list">
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/tehnokrak.jpg" alt="tehnokrak" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/tehnokrak.jpg" alt="tehnokrak" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -62,7 +67,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/new-orlean.jpg" alt="new orlean" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/new-orlean.jpg" alt="new orlean" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                                 <p class="portfolio-text">Дизайн</p>
@@ -71,7 +82,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/seafood.jpg" alt="seafood" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/seafood.jpg" alt="seafood" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                                 <p class="portfolio-text">Приложение</p>
@@ -80,7 +97,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/prime.jpg" alt="prime" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/prime.jpg" alt="prime" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Проект <span lang="en">Prime</span></h2>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -89,7 +112,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/boxes.jpg" alt="boxes" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/boxes.jpg" alt="boxes" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
                                 <p class="portfolio-text">Приложение</p>
@@ -98,7 +127,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/inspiration-no-borders.jpg" alt="inspiration-no-borders" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/inspiration-no-borders.jpg" alt="inspiration-no-borders" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2 lang="en"  class="portfolio-title">Inspiration has no Borders</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -107,7 +142,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/limited-edition.jpg" alt="limited edition" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/limited-edition.jpg" alt="limited edition" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
                                 <p class="portfolio-text">Дизайн</p>
@@ -116,7 +157,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/lab.jpg" alt="lab" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/lab.jpg" alt="lab" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2  class="portfolio-title">Проект <span lang="en">LAB</span></h2>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -125,7 +172,13 @@
                     </li>
                     <li class="img-list">
                         <a href="" class="portfolio-link">
-                            <img src="./images/growing-business.jpg" alt="growing-business" width="370">
+                            <div class="overley-portfolio">
+                                <img src="./images/growing-business.jpg" alt="growing-business" width="370">
+                                <p class="overley-portfolio-link">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                    получить исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="img-text">
                                 <h2 lang="en"  class="portfolio-title">Growing Business</h2>
                                 <p class="portfolio-text">Приложение</p>
