--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <a href="./index.html" lang="en" class="logo"><span class="logo-link">Web</span>Studio</a>
                 <ul class="site-nav list">
-                    <li class="link-item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="link-item"><a href="./index.html" class="link current button-border">Студия</a></li>
                     <li class="link-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="link-item"><a href="" class="link">Контакты</a></li>
                 </ul>
@@ -39,11 +39,12 @@
             </div>
         </div>
     </header>
+
     <main>
         <div class="hero">
             <section>
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="button">Заказать услугу</button>
+                <button type="button" class="button" data-modal-open>Заказать услугу</button>
             </section>
         </div>
         <section class="aside">
@@ -92,9 +93,24 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="work-list list">
-                    <li class="work-img"><img src="./images/box.jpg" alt="работают на iPad" width="370" /></li>
-                    <li class="work-img"><img src="./images/box-сomputer.jpg" alt="работают на компьтере" width="370" /></li>
-                    <li class="work-img"><img src="./images/box-tablet.jpg" alt="работают на планшете" width="370" /></li>
+                    <li class="work-img">
+                        <div class="overley-work-list">    
+                            <img src="./images/box.jpg" alt="работают на iPad" width="370" />
+                            <p class="overley-work-img">десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li class="work-img">
+                        <div class="overley-work-list">
+                            <img src="./images/box-сomputer.jpg" alt="работают на компьтере" width="370" />
+                            <p class="overley-work-img">мобильные приложения</p>
+                        </div>
+                    </li>
+                    <li class="work-img">
+                        <div class="overley-work-list">
+                            <img src="./images/box-tablet.jpg" alt="работают на планшете" width="370" />
+                            <p class="overley-work-img">дизайнерские приложения</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -299,6 +315,7 @@
             </div>
         </section>
     </main>
+
     <footer class="footer">
         <div class="footer-container container">
             <div class="footer-container-list">
@@ -346,6 +363,18 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="modal-close-icon" width="18" height="18">
+                    <use href="./images/icons.svg.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
