--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <a href="./index.html" lang="en" class="logo"><span class="logo-link">Web</span>Studio</a>
                 <ul class="site-nav list">
                     <li class="link-item"><a href="./index.html" class="link">Студия</a></li>
-                    <li class="link-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li class="link-item"><a href="./portfolio.html" class="link current button-border">Портфолио</a></li>
                     <li class="link-item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
